--- a/index.html
+++ b/index.html
@@ -18,13 +18,13 @@ if(typeof Muse == "undefined") window.Muse = {}; window.Muse.assets = {"required
   <title>Home | The Corner</title>
   <!-- CSS -->
   <link rel="stylesheet" type="text/css" href="css/site_global.css?crc=289347364"/>
-  <link rel="stylesheet" type="text/css" href="css/master_a-master.css?crc=204324485"/>
-  <link rel="stylesheet" type="text/css" href="css/index.css?crc=3797304194" id="pagesheet"/>
+  <link rel="stylesheet" type="text/css" href="css/master_a-master.css?crc=4131584361"/>
+  <link rel="stylesheet" type="text/css" href="css/index.css?crc=291111882" id="pagesheet"/>
   <!-- IE-only CSS -->
   <!--[if lt IE 9]>
   <link rel="stylesheet" type="text/css" href="css/iefonts_index.css?crc=3824530138"/>
   <link rel="stylesheet" type="text/css" href="css/nomq_preview_master_a-master.css?crc=3772226739"/>
-  <link rel="stylesheet" type="text/css" href="css/nomq_index.css?crc=109456873" id="nomq_pagesheet"/>
+  <link rel="stylesheet" type="text/css" href="css/nomq_index.css?crc=262950733" id="nomq_pagesheet"/>
   <![endif]-->
   <!-- Other scripts -->
   <script type="text/javascript">
@@ -322,7 +322,7 @@ span.hideMe {
     </div>
     <div class="grpelem shared_content" id="u1180" data-content-guid="u1180_content"><!-- simple frame --></div>
     <a class="nonblock nontext Button rounded-corners clearfix" id="buttonu109" href="trades.html" data-visibility="changed" style="visibility:hidden"><!-- container box --><div class="clearfix grpelem" id="u110-4" data-sizePolicy="fixed" data-pintopage="page_fluidx"><!-- content --><p class="shared_content" data-content-guid="u110-4_0_content">trades</p></div></a>
-    <div class="verticalspacer" data-offset-top="1101" data-content-above-spacer="1089" data-content-below-spacer="122" data-sizePolicy="fixed" data-pintopage="page_fixedLeft"></div>
+    <div class="verticalspacer" data-offset-top="1089" data-content-above-spacer="1089" data-content-below-spacer="122" data-sizePolicy="fixed" data-pintopage="page_fixedLeft"></div>
     <div class="browser_width grpelem" id="u200-bw">
      <div id="u200"><!-- group -->
       <div class="clearfix" id="u200_align_to_page">
@@ -339,16 +339,16 @@ span.hideMe {
   <div class="breakpoint" id="bp_621" data-min-width="321" data-max-width="621"><!-- responsive breakpoint node -->
    <div class="clearfix temp_no_id" data-orig-id="page"><!-- group -->
     <div class="clearfix grpelem" id="ppu1180"><!-- group -->
-     <div class="clearfix grpelem" id="pu1180"><!-- group -->
-      <span class="grpelem placeholder" data-placeholder-for="u1180_content"><!-- placeholder node --></span>
-      <div class="clearfix grpelem temp_no_id shared_content" data-orig-id="u1230" data-content-guid="u1230_content"><!-- group -->
+     <div class="clearfix grpelem" id="pu1180"><!-- column -->
+      <span class="colelem placeholder" data-placeholder-for="u1180_content"><!-- placeholder node --></span>
+      <div class="clearfix colelem temp_no_id" data-orig-id="u1230"><!-- group -->
        <div class="clearfix grpelem temp_no_id" data-orig-id="pu1141"><!-- group -->
         <div class="clearfix grpelem temp_no_id" data-orig-id="u1141"><!-- group -->
          <div class="clearfix grpelem temp_no_id" data-orig-id="pu235-4"><!-- column -->
           <a class="nonblock nontext clearfix colelem temp_no_id" href="https://twitter.com/BitcoinRooster" data-orig-id="u235-4"><!-- content --><span class="placeholder" data-placeholder-for="u235-4_0_content"><!-- placeholder node --></span></a>
           <a class="nonblock nontext clearfix colelem temp_no_id" href="https://twitter.com/BitcoinRooster" data-orig-id="u236-4"><!-- content --><span class="placeholder" data-placeholder-for="u236-4_0_content"><!-- placeholder node --></span></a>
          </div>
-         <div class="clearfix grpelem temp_no_id" data-orig-id="pu398"><!-- column -->
+         <div class="clearfix grpelem temp_no_id shared_content" data-orig-id="pu398" data-content-guid="pu398_content"><!-- column -->
           <a class="nonblock nontext clip_frame colelem temp_no_id" href="bitcoin-101.html" data-orig-id="u398"><!-- image --><img class="block temp_no_id temp_no_img_src" data-orig-src="images/bitcoin%20101%20(1).jpg?crc=3916845332" alt="" width="265" height="149" data-orig-id="u398_img" src="images/blank.gif?crc=4208392903"/></a>
           <a class="nonblock nontext Button rounded-corners clearfix colelem temp_no_id" href="bitcoin-101.html" data-orig-id="buttonu133"><!-- container box --><div class="clearfix grpelem temp_no_id" data-orig-id="u134-4"><!-- content --><span class="placeholder" data-placeholder-for="u134-4_0_content"><!-- placeholder node --></span></div></a>
          </div>
@@ -371,16 +371,14 @@ span.hideMe {
      <a class="nonblock nontext Button rounded-corners clearfix temp_no_id" href="about.html" data-orig-id="buttonu101"><!-- container box --><div class="clearfix grpelem temp_no_id" data-orig-id="u102-4"><!-- content --><span class="placeholder" data-placeholder-for="u102-4_0_content"><!-- placeholder node --></span></div></a>
      <a class="nonblock nontext Button rounded-corners clearfix temp_no_id" href="trades.html" data-orig-id="buttonu109"><!-- container box --><div class="clearfix grpelem temp_no_id" data-orig-id="u110-4"><!-- content --><span class="placeholder" data-placeholder-for="u110-4_0_content"><!-- placeholder node --></span></div></a>
     </div>
-    <div class="verticalspacer shared_content" data-offset-top="1318" data-content-above-spacer="1318" data-content-below-spacer="122" data-content-guid="page_1_content"></div>
+    <div class="verticalspacer shared_content" data-offset-top="1342" data-content-above-spacer="1341" data-content-below-spacer="121" data-content-guid="page_1_content"></div>
     <div class="browser_width grpelem temp_no_id" data-orig-id="u200-bw">
      <div class="temp_no_id" data-orig-id="u200"><!-- group -->
       <div class="clearfix temp_no_id" data-orig-id="u200_align_to_page">
        <div class="clearfix grpelem temp_no_id" data-orig-id="u1406"><!-- group -->
-        <div class="clearfix grpelem" id="pu201-4"><!-- group -->
-         <a class="nonblock nontext MuseLinkActive clearfix grpelem temp_no_id" href="index.html" data-orig-id="u201-4"><!-- content --><span class="placeholder" data-placeholder-for="u201-4_0_content"><!-- placeholder node --></span></a>
-         <a class="nonblock nontext clearfix grpelem temp_no_id" href="about.html" data-orig-id="u202-4"><!-- content --><span class="placeholder" data-placeholder-for="u202-4_0_content"><!-- placeholder node --></span></a>
-         <a class="nonblock nontext clearfix grpelem temp_no_id" href="trades.html" data-orig-id="u203-4"><!-- content --><span class="placeholder" data-placeholder-for="u203-4_0_content"><!-- placeholder node --></span></a>
-        </div>
+        <a class="nonblock nontext clearfix grpelem temp_no_id" href="about.html" data-orig-id="u202-4"><!-- content --><span class="placeholder" data-placeholder-for="u202-4_0_content"><!-- placeholder node --></span></a>
+        <a class="nonblock nontext MuseLinkActive clearfix grpelem temp_no_id" href="index.html" data-orig-id="u201-4"><!-- content --><span class="placeholder" data-placeholder-for="u201-4_0_content"><!-- placeholder node --></span></a>
+        <a class="nonblock nontext clearfix grpelem temp_no_id" href="trades.html" data-orig-id="u203-4"><!-- content --><span class="placeholder" data-placeholder-for="u203-4_0_content"><!-- placeholder node --></span></a>
        </div>
       </div>
      </div>
@@ -397,14 +395,36 @@ span.hideMe {
       <a class="nonblock nontext Button rounded-corners clearfix temp_no_id" href="trades.html" data-orig-id="buttonu109"><!-- container box --><div class="clearfix grpelem temp_no_id" data-orig-id="u110-4"><!-- content --><span class="placeholder" data-placeholder-for="u110-4_0_content"><!-- placeholder node --></span></div></a>
      </div>
      <span class="grpelem placeholder" data-placeholder-for="u1180_content"><!-- placeholder node --></span>
-     <span class="clearfix grpelem placeholder" data-placeholder-for="u1230_content"><!-- placeholder node --></span>
+     <div class="clearfix grpelem temp_no_id" data-orig-id="u1230"><!-- group -->
+      <div class="clearfix grpelem temp_no_id" data-orig-id="pu1141"><!-- group -->
+       <div class="clearfix grpelem temp_no_id" data-orig-id="u1141"><!-- group -->
+        <div class="clearfix grpelem temp_no_id" data-orig-id="pu130-4"><!-- column -->
+         <a class="nonblock nontext clearfix colelem temp_no_id" href="https://twitter.com/BitcoinRooster" data-orig-id="u130-4"><!-- content --><span class="placeholder" data-placeholder-for="u130-4_0_content"><!-- placeholder node --></span></a>
+         <a class="nonblock nontext clearfix colelem temp_no_id" href="https://twitter.com/BitcoinRooster" data-orig-id="u179-4"><!-- content --><span class="placeholder" data-placeholder-for="u179-4_0_content"><!-- placeholder node --></span></a>
+         <div class="clearfix colelem" id="pu443"><!-- group -->
+          <div class="Paragraph-Style size_fixed grpelem temp_no_id" data-orig-id="u443"><!-- custom html -->
+           <span class="placeholder" data-placeholder-for="u443_0_content"><!-- placeholder node --></span>
+          </div>
+          <div class="clearfix grpelem temp_no_id" data-orig-id="pu235-4"><!-- column -->
+           <a class="nonblock nontext clearfix colelem temp_no_id" href="https://twitter.com/BitcoinRooster" data-orig-id="u235-4"><!-- content --><span class="placeholder" data-placeholder-for="u235-4_0_content"><!-- placeholder node --></span></a>
+           <a class="nonblock nontext clearfix colelem temp_no_id" href="https://twitter.com/BitcoinRooster" data-orig-id="u236-4"><!-- content --><span class="placeholder" data-placeholder-for="u236-4_0_content"><!-- placeholder node --></span></a>
+          </div>
+         </div>
+        </div>
+        <span class="clearfix grpelem placeholder" data-placeholder-for="pu398_content"><!-- placeholder node --></span>
+       </div>
+       <div class="Paragraph-Style size_fixed grpelem temp_no_id" data-orig-id="u1220"><!-- custom html -->
+        <span class="placeholder" data-placeholder-for="u1220_0_content"><!-- placeholder node --></span>
+       </div>
+      </div>
+     </div>
     </div>
     <span class="verticalspacer placeholder" data-placeholder-for="page_1_content"><!-- placeholder node --></span>
     <div class="browser_width grpelem temp_no_id" data-orig-id="u200-bw">
      <div class="temp_no_id" data-orig-id="u200"><!-- group -->
       <div class="clearfix temp_no_id" data-orig-id="u200_align_to_page">
        <div class="clearfix grpelem temp_no_id" data-orig-id="u1406"><!-- group -->
-        <div class="clearfix grpelem temp_no_id" data-orig-id="pu201-4"><!-- column -->
+        <div class="clearfix grpelem" id="pu201-4"><!-- column -->
          <a class="nonblock nontext MuseLinkActive clearfix colelem temp_no_id" href="index.html" data-orig-id="u201-4"><!-- content --><span class="placeholder" data-placeholder-for="u201-4_0_content"><!-- placeholder node --></span></a>
          <a class="nonblock nontext clearfix colelem temp_no_id" href="trades.html" data-orig-id="u203-4"><!-- content --><span class="placeholder" data-placeholder-for="u203-4_0_content"><!-- placeholder node --></span></a>
          <a class="nonblock nontext clearfix colelem temp_no_id" href="about.html" data-orig-id="u202-4"><!-- content --><span class="placeholder" data-placeholder-for="u202-4_0_content"><!-- placeholder node --></span></a>
