--- a/about.html
+++ b/about.html
@@ -18,13 +18,13 @@ if(typeof Muse == "undefined") window.Muse = {}; window.Muse.assets = {"required
   <title>About | The Corner</title>
   <!-- CSS -->
   <link rel="stylesheet" type="text/css" href="css/site_global.css?crc=289347364"/>
-  <link rel="stylesheet" type="text/css" href="css/master_a-master.css?crc=204324485"/>
-  <link rel="stylesheet" type="text/css" href="css/about.css?crc=4078442836" id="pagesheet"/>
+  <link rel="stylesheet" type="text/css" href="css/master_a-master.css?crc=4131584361"/>
+  <link rel="stylesheet" type="text/css" href="css/about.css?crc=76377329" id="pagesheet"/>
   <!-- IE-only CSS -->
   <!--[if lt IE 9]>
   <link rel="stylesheet" type="text/css" href="css/iefonts_about.css?crc=3824530138"/>
   <link rel="stylesheet" type="text/css" href="css/nomq_preview_master_a-master.css?crc=3772226739"/>
-  <link rel="stylesheet" type="text/css" href="css/nomq_about.css?crc=3910700007" id="nomq_pagesheet"/>
+  <link rel="stylesheet" type="text/css" href="css/nomq_about.css?crc=4015614952" id="nomq_pagesheet"/>
   <![endif]-->
   <!-- Other scripts -->
   <script type="text/javascript">
@@ -44,29 +44,29 @@ if(typeof Muse == "undefined") window.Muse = {}; window.Muse.assets = {"required
     <div class="browser_width shared_content" id="u118-bw" data-content-guid="u118-bw_content">
      <div id="u118"><!-- simple frame --></div>
     </div>
-    <div class="clearfix grpelem shared_content" id="pu170-7" data-content-guid="pu170-7_content"><!-- column -->
-     <div class="clearfix colelem shared_content" id="u170-7" data-muse-temp-textContainer-sizePolicy="true" data-muse-temp-textContainer-pinning="true" data-content-guid="u170-7_content"><!-- content -->
-      <p>The Corner was created in 2019 by Ethan Wilk, a teenager from Arizona (<a class="nonblock" href="https://twitter.com/BitcoinRooster"><span id="u170-2">@BitcoinRooster on Twitter</span></a>). A young developer with backgrounds in video game and iOS development, Ethan fell in love with the technology that powered cryptocurrency and the blockchain. Fueled by curiosity, Ethan began to investigate the white paper behind every altcoin he came across, and eventually took an interest in trading the internet coins in 2017. With a newly found passion for cryptocurrency and for programming, Ethan took it upon himself to create algorithms to trade these mysterious cryptocurrencies. As the operations soon became too messy, he decided to create this very blog you're reading in order to track his progress as a cryptocurrency developer.</p>
+    <div class="clearfix grpelem" id="pu170-7"><!-- column -->
+     <div class="clearfix colelem" id="u170-7" data-muse-temp-textContainer-sizePolicy="true" data-muse-temp-textContainer-pinning="true"><!-- content -->
+      <p class="shared_content" data-content-guid="u170-7_0_content">The Corner was created in 2019 by Ethan Wilk, a teenager from Arizona (<a class="nonblock" href="https://twitter.com/BitcoinRooster"><span id="u170-2">@BitcoinRooster on Twitter</span></a>). A young developer with backgrounds in video game and iOS development, Ethan fell in love with the technology that powered cryptocurrency and the blockchain. Fueled by curiosity, Ethan began to investigate the white paper behind every altcoin he came across, and eventually took an interest in trading the internet coins in 2017. With a newly found passion for cryptocurrency and for programming, Ethan took it upon himself to create algorithms to trade these mysterious cryptocurrencies. As the operations soon became too messy, he decided to create this very blog you're reading in order to track his progress as a cryptocurrency developer.</p>
      </div>
-     <div class="clearfix colelem shared_content" id="u338-4" data-muse-temp-textContainer-sizePolicy="true" data-muse-temp-textContainer-pinning="true" data-content-guid="u338-4_content"><!-- content -->
-      <p>This blog is a bit of a mess. If you're reading this right now you're probably only here because Rooster referred you to it or because you have no idea where you are. Either way, on here you'll find posts about cryptocurrency trades (not financial advice, just opinions), my trading algorithms, and my progress at summer camps or internships. Occasionally a guest writer may appear on the blog, maybe to write a post on baking cakes or something I don't really know. If you'd like to stay updated with the madness, please subscribe to our newsletter mail list (can be done at the bottom of any page). Have fun reading!</p>
+     <div class="clearfix colelem" id="u338-4" data-muse-temp-textContainer-sizePolicy="true" data-muse-temp-textContainer-pinning="true"><!-- content -->
+      <p class="shared_content" data-content-guid="u338-4_0_content">This blog is a bit of a mess. If you're reading this right now you're probably only here because Rooster referred you to it or because you have no idea where you are. Either way, on here you'll find posts about cryptocurrency trades (not financial advice, just opinions), my trading algorithms, and my progress at summer camps or internships. Occasionally a guest writer may appear on the blog, maybe to write a post on baking cakes or something I don't really know. If you'd like to stay updated with the madness, please subscribe to our newsletter mail list (can be done at the bottom of any page). Have fun reading!</p>
      </div>
     </div>
     <div class="clearfix grpelem shared_content" id="pu94-4" data-content-guid="pu94-4_content"><!-- group -->
      <a class="nonblock nontext clearfix shared_content" id="u94-4" href="index.html" data-muse-temp-textContainer-sizePolicy="true" data-muse-temp-textContainer-pinning="true" data-content-guid="u94-4_content"><!-- content --><p>the corner</p></a>
      <a class="nonblock nontext Button ButtonSelected clearfix" id="buttonu101" href="about.html" data-visibility="changed" style="visibility:hidden"><!-- container box --><div class="clearfix grpelem" id="u102-4" data-sizePolicy="fixed" data-pintopage="page_fluidx"><!-- content --><p class="shared_content" data-content-guid="u102-4_0_content">about</p></div></a>
     </div>
-    <div class="clearfix grpelem shared_content" id="pu166-4" data-content-guid="pu166-4_content"><!-- column -->
-     <div class="clearfix colelem shared_content" id="u166-4" data-muse-temp-textContainer-sizePolicy="true" data-muse-temp-textContainer-pinning="true" data-content-guid="u166-4_content"><!-- content -->
-      <p>The Story</p>
+    <div class="clearfix grpelem" id="pu166-4"><!-- column -->
+     <div class="clearfix colelem" id="u166-4" data-muse-temp-textContainer-sizePolicy="true" data-muse-temp-textContainer-pinning="true"><!-- content -->
+      <p class="shared_content" data-content-guid="u166-4_0_content">The Story</p>
      </div>
-     <div class="clearfix colelem shared_content" id="u337-4" data-muse-temp-textContainer-sizePolicy="true" data-muse-temp-textContainer-pinning="true" data-content-guid="u337-4_content"><!-- content -->
-      <p>The Blog</p>
+     <div class="clearfix colelem" id="u337-4" data-muse-temp-textContainer-sizePolicy="true" data-muse-temp-textContainer-pinning="true"><!-- content -->
+      <p class="shared_content" data-content-guid="u337-4_0_content">The Blog</p>
      </div>
     </div>
     <a class="nonblock nontext Button clearfix shared_content" id="buttonu109" href="trades.html" data-visibility="changed" style="visibility:hidden" data-content-guid="buttonu109_content"><!-- container box --><div class="clearfix grpelem" id="u110-4" data-sizePolicy="fixed" data-pintopage="page_fluidx"><!-- content --><p class="shared_content" data-content-guid="u110-4_0_content">trades</p></div></a>
     <div class="verticalspacer" data-offset-top="609" data-content-above-spacer="608" data-content-below-spacer="122" data-sizePolicy="fixed" data-pintopage="page_fixedLeft"></div>
-    <div class="browser_width grpelem shared_content" id="u200-bw" data-content-guid="u200-bw_content">
+    <div class="browser_width grpelem" id="u200-bw">
      <div id="u200"><!-- group -->
       <div class="clearfix" id="u200_align_to_page">
        <div class="clearfix grpelem" id="u1406"><!-- group -->
@@ -82,18 +82,50 @@ if(typeof Muse == "undefined") window.Muse = {}; window.Muse.assets = {"required
   <div class="breakpoint" id="bp_621" data-min-width="321" data-max-width="621"><!-- responsive breakpoint node -->
    <div class="clearfix borderbox temp_no_id" data-orig-id="page"><!-- group -->
     <span class="browser_width placeholder" data-placeholder-for="u118-bw_content"><!-- placeholder node --></span>
-    <span class="clearfix grpelem placeholder" data-placeholder-for="pu170-7_content"><!-- placeholder node --></span>
+    <div class="clearfix grpelem temp_no_id" data-orig-id="pu170-7"><!-- column -->
+     <div class="clearfix colelem temp_no_id" data-sizePolicy="fixed" data-pintopage="page_fluidx" data-orig-id="u170-7"><!-- content -->
+      <span class="placeholder" data-placeholder-for="u170-7_0_content"><!-- placeholder node --></span>
+     </div>
+     <div class="clearfix colelem temp_no_id" data-sizePolicy="fixed" data-pintopage="page_fluidx" data-orig-id="u338-4"><!-- content -->
+      <span class="placeholder" data-placeholder-for="u338-4_0_content"><!-- placeholder node --></span>
+     </div>
+    </div>
     <span class="clearfix grpelem placeholder" data-placeholder-for="pu94-4_content"><!-- placeholder node --></span>
-    <span class="clearfix grpelem placeholder" data-placeholder-for="pu166-4_content"><!-- placeholder node --></span>
+    <div class="clearfix grpelem temp_no_id" data-orig-id="pu166-4"><!-- column -->
+     <div class="clearfix colelem temp_no_id" data-sizePolicy="fixed" data-pintopage="page_fluidx" data-orig-id="u166-4"><!-- content -->
+      <span class="placeholder" data-placeholder-for="u166-4_0_content"><!-- placeholder node --></span>
+     </div>
+     <div class="clearfix colelem temp_no_id" data-sizePolicy="fixed" data-pintopage="page_fluidx" data-orig-id="u337-4"><!-- content -->
+      <span class="placeholder" data-placeholder-for="u337-4_0_content"><!-- placeholder node --></span>
+     </div>
+    </div>
     <span class="nonblock nontext Button clearfix placeholder" data-placeholder-for="buttonu109_content"><!-- placeholder node --></span>
-    <div class="verticalspacer" data-offset-top="895" data-content-above-spacer="894" data-content-below-spacer="121" data-sizePolicy="fixed" data-pintopage="page_fixedLeft"></div>
-    <span class="browser_width grpelem placeholder" data-placeholder-for="u200-bw_content"><!-- placeholder node --></span>
+    <div class="verticalspacer" data-offset-top="1260" data-content-above-spacer="1259" data-content-below-spacer="121" data-sizePolicy="fixed" data-pintopage="page_fixedLeft"></div>
+    <div class="browser_width grpelem temp_no_id" data-orig-id="u200-bw">
+     <div class="temp_no_id" data-orig-id="u200"><!-- group -->
+      <div class="clearfix temp_no_id" data-orig-id="u200_align_to_page">
+       <div class="clearfix grpelem temp_no_id" data-orig-id="u1406"><!-- group -->
+        <a class="nonblock nontext MuseLinkActive clearfix grpelem temp_no_id" href="about.html" data-sizePolicy="fixed" data-pintopage="page_fixedCenter" data-orig-id="u202-4"><!-- content --><span class="placeholder" data-placeholder-for="u202-4_0_content"><!-- placeholder node --></span></a>
+        <a class="nonblock nontext clearfix grpelem temp_no_id" href="index.html" data-sizePolicy="fixed" data-pintopage="page_fixedCenter" data-orig-id="u201-4"><!-- content --><span class="placeholder" data-placeholder-for="u201-4_0_content"><!-- placeholder node --></span></a>
+        <a class="nonblock nontext clearfix grpelem temp_no_id" href="trades.html" data-sizePolicy="fixed" data-pintopage="page_fixedCenter" data-orig-id="u203-4"><!-- content --><span class="placeholder" data-placeholder-for="u203-4_0_content"><!-- placeholder node --></span></a>
+       </div>
+      </div>
+     </div>
+    </div>
    </div>
   </div>
   <div class="breakpoint" id="bp_320" data-max-width="320"><!-- responsive breakpoint node -->
    <div class="clearfix borderbox temp_no_id" data-orig-id="page"><!-- group -->
-    <div class="clearfix grpelem" id="pu118"><!-- group -->
-     <span class="browser_width placeholder" data-placeholder-for="u118-bw_content"><!-- placeholder node --></span>
+    <span class="browser_width placeholder" data-placeholder-for="u118-bw_content"><!-- placeholder node --></span>
+    <div class="clearfix grpelem temp_no_id" data-orig-id="pu170-7"><!-- column -->
+     <div class="clearfix colelem temp_no_id" data-sizePolicy="fixed" data-pintopage="page_fluidx" data-orig-id="u170-7"><!-- content -->
+      <span class="placeholder" data-placeholder-for="u170-7_0_content"><!-- placeholder node --></span>
+     </div>
+     <div class="clearfix colelem temp_no_id" data-sizePolicy="fixed" data-pintopage="page_fluidx" data-orig-id="u338-4"><!-- content -->
+      <span class="placeholder" data-placeholder-for="u338-4_0_content"><!-- placeholder node --></span>
+     </div>
+    </div>
+    <div class="clearfix grpelem temp_no_id" data-orig-id="pu94-4"><!-- group -->
      <div id="u94-4-wrapper">
       <span class="nonblock nontext clearfix placeholder" data-placeholder-for="u94-4_content"><!-- placeholder node --></span>
      </div>
@@ -102,15 +134,17 @@ if(typeof Muse == "undefined") window.Muse = {}; window.Muse.assets = {"required
      </div>
     </div>
     <div class="clearfix grpelem temp_no_id" data-orig-id="pu166-4"><!-- column -->
-     <span class="clearfix colelem placeholder" data-placeholder-for="u166-4_content"><!-- placeholder node --></span>
-     <span class="clearfix colelem placeholder" data-placeholder-for="u170-7_content"><!-- placeholder node --></span>
-     <span class="clearfix colelem placeholder" data-placeholder-for="u337-4_content"><!-- placeholder node --></span>
-     <span class="clearfix colelem placeholder" data-placeholder-for="u338-4_content"><!-- placeholder node --></span>
+     <div class="clearfix colelem temp_no_id" data-sizePolicy="fixed" data-pintopage="page_fluidx" data-orig-id="u166-4"><!-- content -->
+      <span class="placeholder" data-placeholder-for="u166-4_0_content"><!-- placeholder node --></span>
+     </div>
+     <div class="clearfix colelem temp_no_id" data-sizePolicy="fixed" data-pintopage="page_fluidx" data-orig-id="u337-4"><!-- content -->
+      <span class="placeholder" data-placeholder-for="u337-4_0_content"><!-- placeholder node --></span>
+     </div>
     </div>
     <div id="buttonu109-wrapper">
      <a class="nonblock nontext Button clearfix temp_no_id" href="trades.html" data-visibility="changed" style="visibility:hidden" data-orig-id="buttonu109"><!-- container box --><div class="clearfix grpelem temp_no_id" data-muse-temp-textContainer-sizePolicy="true" data-muse-temp-textContainer-pinning="true" data-orig-id="u110-4"><!-- content --><span class="placeholder" data-placeholder-for="u110-4_0_content"><!-- placeholder node --></span></div></a>
     </div>
-    <div class="verticalspacer" data-offset-top="1641" data-content-above-spacer="1640" data-content-below-spacer="121" data-sizePolicy="fixed" data-pintopage="page_fixedLeft"></div>
+    <div class="verticalspacer" data-offset-top="1253" data-content-above-spacer="1253" data-content-below-spacer="121" data-sizePolicy="fixed" data-pintopage="page_fixedLeft"></div>
     <div class="browser_width grpelem temp_no_id" data-orig-id="u200-bw">
      <div class="temp_no_id" data-orig-id="u200"><!-- group -->
       <div class="clearfix temp_no_id" data-orig-id="u200_align_to_page">
