--- a/systems-week1.html
+++ b/systems-week1.html
@@ -18,8 +18,8 @@ if(typeof Muse == "undefined") window.Muse = {}; window.Muse.assets = {"required
   <title>Systems Imagination, Week 1 | The Corner</title>
   <!-- CSS -->
   <link rel="stylesheet" type="text/css" href="css/site_global.css?crc=289347364"/>
-  <link rel="stylesheet" type="text/css" href="css/master_a-master.css?crc=204324485"/>
-  <link rel="stylesheet" type="text/css" href="css/systems-week1.css?crc=3931755719" id="pagesheet"/>
+  <link rel="stylesheet" type="text/css" href="css/master_a-master.css?crc=4131584361"/>
+  <link rel="stylesheet" type="text/css" href="css/systems-week1.css?crc=376596479" id="pagesheet"/>
   <!-- IE-only CSS -->
   <!--[if lt IE 9]>
   <link rel="stylesheet" type="text/css" href="css/iefonts_systems-week1.css?crc=3824530138"/>
@@ -93,7 +93,7 @@ if(typeof Muse == "undefined") window.Muse = {}; window.Muse.assets = {"required
     </div>
     <a class="nonblock nontext Button clearfix shared_content" id="buttonu109" href="trades.html" data-visibility="changed" style="visibility:hidden" data-content-guid="buttonu109_content"><!-- container box --><div class="clearfix grpelem" id="u110-4" data-sizePolicy="fixed" data-pintopage="page_fluidx"><!-- content --><p class="shared_content" data-content-guid="u110-4_0_content">trades</p></div></a>
     <div class="verticalspacer" data-offset-top="2894" data-content-above-spacer="2893" data-content-below-spacer="122" data-sizePolicy="fixed" data-pintopage="page_fixedLeft"></div>
-    <div class="browser_width grpelem shared_content" id="u200-bw" data-content-guid="u200-bw_content">
+    <div class="browser_width grpelem" id="u200-bw">
      <div id="u200"><!-- group -->
       <div class="clearfix" id="u200_align_to_page">
        <div class="clearfix grpelem" id="u1406"><!-- group -->
@@ -122,7 +122,17 @@ if(typeof Muse == "undefined") window.Muse = {}; window.Muse.assets = {"required
     <span class="clearfix grpelem placeholder" data-placeholder-for="pu495-4_content"><!-- placeholder node --></span>
     <span class="nonblock nontext Button clearfix placeholder" data-placeholder-for="buttonu109_content"><!-- placeholder node --></span>
     <div class="verticalspacer" data-offset-top="4033" data-content-above-spacer="4032" data-content-below-spacer="121" data-sizePolicy="fixed" data-pintopage="page_fixedLeft"></div>
-    <span class="browser_width grpelem placeholder" data-placeholder-for="u200-bw_content"><!-- placeholder node --></span>
+    <div class="browser_width grpelem temp_no_id" data-orig-id="u200-bw">
+     <div class="temp_no_id" data-orig-id="u200"><!-- group -->
+      <div class="clearfix temp_no_id" data-orig-id="u200_align_to_page">
+       <div class="clearfix grpelem temp_no_id" data-orig-id="u1406"><!-- group -->
+        <a class="nonblock nontext clearfix grpelem temp_no_id" href="about.html" data-sizePolicy="fixed" data-pintopage="page_fixedCenter" data-orig-id="u202-4"><!-- content --><span class="placeholder" data-placeholder-for="u202-4_0_content"><!-- placeholder node --></span></a>
+        <a class="nonblock nontext clearfix grpelem temp_no_id" href="index.html" data-sizePolicy="fixed" data-pintopage="page_fixedCenter" data-orig-id="u201-4"><!-- content --><span class="placeholder" data-placeholder-for="u201-4_0_content"><!-- placeholder node --></span></a>
+        <a class="nonblock nontext clearfix grpelem temp_no_id" href="trades.html" data-sizePolicy="fixed" data-pintopage="page_fixedCenter" data-orig-id="u203-4"><!-- content --><span class="placeholder" data-placeholder-for="u203-4_0_content"><!-- placeholder node --></span></a>
+       </div>
+      </div>
+     </div>
+    </div>
    </div>
   </div>
   <div class="breakpoint" id="bp_320" data-max-width="320"><!-- responsive breakpoint node -->
