--- a/index.html
+++ b/index.html
@@ -18,13 +18,13 @@ if(typeof Muse == "undefined") window.Muse = {}; window.Muse.assets = {"required
   <title>Home | The Corner</title>
   <!-- CSS -->
   <link rel="stylesheet" type="text/css" href="css/site_global.css?crc=289347364"/>
-  <link rel="stylesheet" type="text/css" href="css/master_a-master.css?crc=4131584361"/>
-  <link rel="stylesheet" type="text/css" href="css/index.css?crc=291111882" id="pagesheet"/>
+  <link rel="stylesheet" type="text/css" href="css/master_a-master.css?crc=3798475662"/>
+  <link rel="stylesheet" type="text/css" href="css/index.css?crc=3916392517" id="pagesheet"/>
   <!-- IE-only CSS -->
   <!--[if lt IE 9]>
   <link rel="stylesheet" type="text/css" href="css/iefonts_index.css?crc=3824530138"/>
   <link rel="stylesheet" type="text/css" href="css/nomq_preview_master_a-master.css?crc=3772226739"/>
-  <link rel="stylesheet" type="text/css" href="css/nomq_index.css?crc=262950733" id="nomq_pagesheet"/>
+  <link rel="stylesheet" type="text/css" href="css/nomq_index.css?crc=3855390428" id="nomq_pagesheet"/>
   <![endif]-->
   <!-- Other scripts -->
   <script type="text/javascript">
@@ -316,12 +316,12 @@ span.hideMe {
       </div>
      </div>
     </div>
-    <div class="clearfix grpelem" id="pu94-4"><!-- group -->
-     <a class="nonblock nontext MuseLinkActive clearfix" id="u94-4" href="index.html" data-muse-temp-textContainer-sizePolicy="true" data-muse-temp-textContainer-pinning="true"><!-- content --><p class="shared_content" data-content-guid="u94-4_0_content">the corner</p></a>
+    <div class="clearfix" id="u2176"><!-- group -->
      <a class="nonblock nontext Button rounded-corners clearfix" id="buttonu101" href="about.html" data-visibility="changed" style="visibility:hidden"><!-- container box --><div class="clearfix grpelem" id="u102-4" data-sizePolicy="fixed" data-pintopage="page_fluidx"><!-- content --><p class="shared_content" data-content-guid="u102-4_0_content">about</p></div></a>
+     <a class="nonblock nontext MuseLinkActive clearfix" id="u94-4" href="index.html" data-muse-temp-textContainer-sizePolicy="true" data-muse-temp-textContainer-pinning="true"><!-- content --><p class="shared_content" data-content-guid="u94-4_0_content">the corner</p></a>
+     <a class="nonblock nontext Button rounded-corners clearfix" id="buttonu109" href="trades.html" data-visibility="changed" style="visibility:hidden"><!-- container box --><div class="clearfix grpelem" id="u110-4" data-sizePolicy="fixed" data-pintopage="page_fluidx"><!-- content --><p class="shared_content" data-content-guid="u110-4_0_content">trades</p></div></a>
     </div>
     <div class="grpelem shared_content" id="u1180" data-content-guid="u1180_content"><!-- simple frame --></div>
-    <a class="nonblock nontext Button rounded-corners clearfix" id="buttonu109" href="trades.html" data-visibility="changed" style="visibility:hidden"><!-- container box --><div class="clearfix grpelem" id="u110-4" data-sizePolicy="fixed" data-pintopage="page_fluidx"><!-- content --><p class="shared_content" data-content-guid="u110-4_0_content">trades</p></div></a>
     <div class="verticalspacer" data-offset-top="1089" data-content-above-spacer="1089" data-content-below-spacer="122" data-sizePolicy="fixed" data-pintopage="page_fixedLeft"></div>
     <div class="browser_width grpelem" id="u200-bw">
      <div id="u200"><!-- group -->
@@ -336,7 +336,7 @@ span.hideMe {
     </div>
    </div>
   </div>
-  <div class="breakpoint" id="bp_621" data-min-width="321" data-max-width="621"><!-- responsive breakpoint node -->
+  <div class="breakpoint" id="bp_621" data-min-width="430" data-max-width="621"><!-- responsive breakpoint node -->
    <div class="clearfix temp_no_id" data-orig-id="page"><!-- group -->
     <div class="clearfix grpelem" id="ppu1180"><!-- group -->
      <div class="clearfix grpelem" id="pu1180"><!-- column -->
@@ -367,9 +367,11 @@ span.hideMe {
       </div>
      </div>
      <span class="browser_width placeholder" data-placeholder-for="u118-bw_content"><!-- placeholder node --></span>
-     <a class="nonblock nontext MuseLinkActive clearfix temp_no_id" href="index.html" data-orig-id="u94-4"><!-- content --><span class="placeholder" data-placeholder-for="u94-4_0_content"><!-- placeholder node --></span></a>
-     <a class="nonblock nontext Button rounded-corners clearfix temp_no_id" href="about.html" data-orig-id="buttonu101"><!-- container box --><div class="clearfix grpelem temp_no_id" data-orig-id="u102-4"><!-- content --><span class="placeholder" data-placeholder-for="u102-4_0_content"><!-- placeholder node --></span></div></a>
-     <a class="nonblock nontext Button rounded-corners clearfix temp_no_id" href="trades.html" data-orig-id="buttonu109"><!-- container box --><div class="clearfix grpelem temp_no_id" data-orig-id="u110-4"><!-- content --><span class="placeholder" data-placeholder-for="u110-4_0_content"><!-- placeholder node --></span></div></a>
+     <div class="clearfix temp_no_id" data-orig-id="u2176"><!-- group -->
+      <a class="nonblock nontext MuseLinkActive clearfix temp_no_id" href="index.html" data-orig-id="u94-4"><!-- content --><span class="placeholder" data-placeholder-for="u94-4_0_content"><!-- placeholder node --></span></a>
+      <a class="nonblock nontext Button rounded-corners clearfix temp_no_id" href="about.html" data-orig-id="buttonu101"><!-- container box --><div class="clearfix grpelem temp_no_id" data-orig-id="u102-4"><!-- content --><span class="placeholder" data-placeholder-for="u102-4_0_content"><!-- placeholder node --></span></div></a>
+      <a class="nonblock nontext Button rounded-corners clearfix temp_no_id" href="trades.html" data-orig-id="buttonu109"><!-- container box --><div class="clearfix grpelem temp_no_id" data-orig-id="u110-4"><!-- content --><span class="placeholder" data-placeholder-for="u110-4_0_content"><!-- placeholder node --></span></div></a>
+     </div>
     </div>
     <div class="verticalspacer shared_content" data-offset-top="1342" data-content-above-spacer="1341" data-content-below-spacer="121" data-content-guid="page_1_content"></div>
     <div class="browser_width grpelem temp_no_id" data-orig-id="u200-bw">
@@ -385,14 +387,64 @@ span.hideMe {
     </div>
    </div>
   </div>
-  <div class="breakpoint" id="bp_320" data-max-width="320"><!-- responsive breakpoint node -->
+  <div class="breakpoint" id="bp_429" data-min-width="321" data-max-width="429"><!-- responsive breakpoint node -->
    <div class="clearfix temp_no_id" data-orig-id="page"><!-- group -->
     <div class="clearfix grpelem" id="ppu118"><!-- group -->
      <div class="clearfix grpelem" id="pu118"><!-- group -->
       <span class="browser_width placeholder" data-placeholder-for="u118-bw_content"><!-- placeholder node --></span>
-      <a class="nonblock nontext MuseLinkActive clearfix temp_no_id" href="index.html" data-orig-id="u94-4"><!-- content --><span class="placeholder" data-placeholder-for="u94-4_0_content"><!-- placeholder node --></span></a>
-      <a class="nonblock nontext Button rounded-corners clearfix temp_no_id" href="about.html" data-orig-id="buttonu101"><!-- container box --><div class="clearfix grpelem temp_no_id" data-orig-id="u102-4"><!-- content --><span class="placeholder" data-placeholder-for="u102-4_0_content"><!-- placeholder node --></span></div></a>
-      <a class="nonblock nontext Button rounded-corners clearfix temp_no_id" href="trades.html" data-orig-id="buttonu109"><!-- container box --><div class="clearfix grpelem temp_no_id" data-orig-id="u110-4"><!-- content --><span class="placeholder" data-placeholder-for="u110-4_0_content"><!-- placeholder node --></span></div></a>
+      <div class="clearfix temp_no_id" data-orig-id="u2176"><!-- group -->
+       <a class="nonblock nontext MuseLinkActive clearfix temp_no_id" href="index.html" data-orig-id="u94-4"><!-- content --><span class="placeholder" data-placeholder-for="u94-4_0_content"><!-- placeholder node --></span></a>
+       <a class="nonblock nontext Button rounded-corners clearfix temp_no_id" href="about.html" data-orig-id="buttonu101"><!-- container box --><div class="clearfix grpelem temp_no_id" data-orig-id="u102-4"><!-- content --><span class="placeholder" data-placeholder-for="u102-4_0_content"><!-- placeholder node --></span></div></a>
+       <a class="nonblock nontext Button rounded-corners clearfix temp_no_id" href="trades.html" data-orig-id="buttonu109"><!-- container box --><div class="clearfix grpelem temp_no_id" data-orig-id="u110-4"><!-- content --><span class="placeholder" data-placeholder-for="u110-4_0_content"><!-- placeholder node --></span></div></a>
+      </div>
+     </div>
+     <span class="grpelem placeholder" data-placeholder-for="u1180_content"><!-- placeholder node --></span>
+     <div class="clearfix grpelem temp_no_id" data-orig-id="u1230"><!-- group -->
+      <div class="clearfix grpelem temp_no_id" data-orig-id="pu1141"><!-- group -->
+       <div class="clearfix grpelem temp_no_id" data-orig-id="u1141"><!-- group -->
+        <div class="clearfix grpelem temp_no_id" data-orig-id="pu130-4"><!-- column -->
+         <a class="nonblock nontext clearfix colelem temp_no_id" href="https://twitter.com/BitcoinRooster" data-orig-id="u130-4"><!-- content --><span class="placeholder" data-placeholder-for="u130-4_0_content"><!-- placeholder node --></span></a>
+         <a class="nonblock nontext clearfix colelem temp_no_id" href="https://twitter.com/BitcoinRooster" data-orig-id="u179-4"><!-- content --><span class="placeholder" data-placeholder-for="u179-4_0_content"><!-- placeholder node --></span></a>
+         <div class="Paragraph-Style size_fixed colelem temp_no_id" data-orig-id="u443"><!-- custom html -->
+          <span class="placeholder" data-placeholder-for="u443_0_content"><!-- placeholder node --></span>
+         </div>
+        </div>
+        <div class="clearfix grpelem temp_no_id" data-orig-id="pu235-4"><!-- column -->
+         <a class="nonblock nontext clearfix colelem temp_no_id" href="https://twitter.com/BitcoinRooster" data-orig-id="u235-4"><!-- content --><span class="placeholder" data-placeholder-for="u235-4_0_content"><!-- placeholder node --></span></a>
+         <a class="nonblock nontext clearfix colelem temp_no_id" href="https://twitter.com/BitcoinRooster" data-orig-id="u236-4"><!-- content --><span class="placeholder" data-placeholder-for="u236-4_0_content"><!-- placeholder node --></span></a>
+        </div>
+        <span class="clearfix grpelem placeholder" data-placeholder-for="pu398_content"><!-- placeholder node --></span>
+       </div>
+       <div class="Paragraph-Style size_fixed grpelem temp_no_id" data-orig-id="u1220"><!-- custom html -->
+        <span class="placeholder" data-placeholder-for="u1220_0_content"><!-- placeholder node --></span>
+       </div>
+      </div>
+     </div>
+    </div>
+    <div class="verticalspacer" data-offset-top="1342" data-content-above-spacer="1328" data-content-below-spacer="121"></div>
+    <div class="browser_width grpelem temp_no_id" data-orig-id="u200-bw">
+     <div class="temp_no_id" data-orig-id="u200"><!-- group -->
+      <div class="clearfix temp_no_id" data-orig-id="u200_align_to_page">
+       <div class="clearfix grpelem temp_no_id" data-orig-id="u1406"><!-- group -->
+        <a class="nonblock nontext clearfix grpelem temp_no_id" href="about.html" data-orig-id="u202-4"><!-- content --><span class="placeholder" data-placeholder-for="u202-4_0_content"><!-- placeholder node --></span></a>
+        <a class="nonblock nontext MuseLinkActive clearfix grpelem temp_no_id" href="index.html" data-orig-id="u201-4"><!-- content --><span class="placeholder" data-placeholder-for="u201-4_0_content"><!-- placeholder node --></span></a>
+        <a class="nonblock nontext clearfix grpelem temp_no_id" href="trades.html" data-orig-id="u203-4"><!-- content --><span class="placeholder" data-placeholder-for="u203-4_0_content"><!-- placeholder node --></span></a>
+       </div>
+      </div>
+     </div>
+    </div>
+   </div>
+  </div>
+  <div class="breakpoint" id="bp_320" data-max-width="320"><!-- responsive breakpoint node -->
+   <div class="clearfix temp_no_id" data-orig-id="page"><!-- group -->
+    <div class="clearfix grpelem temp_no_id" data-orig-id="ppu118"><!-- group -->
+     <div class="clearfix grpelem temp_no_id" data-orig-id="pu118"><!-- group -->
+      <span class="browser_width placeholder" data-placeholder-for="u118-bw_content"><!-- placeholder node --></span>
+      <div class="clearfix temp_no_id" data-orig-id="u2176"><!-- group -->
+       <a class="nonblock nontext MuseLinkActive clearfix temp_no_id" href="index.html" data-orig-id="u94-4"><!-- content --><span class="placeholder" data-placeholder-for="u94-4_0_content"><!-- placeholder node --></span></a>
+       <a class="nonblock nontext Button rounded-corners clearfix temp_no_id" href="about.html" data-orig-id="buttonu101"><!-- container box --><div class="clearfix grpelem temp_no_id" data-orig-id="u102-4"><!-- content --><span class="placeholder" data-placeholder-for="u102-4_0_content"><!-- placeholder node --></span></div></a>
+       <a class="nonblock nontext Button rounded-corners clearfix temp_no_id" href="trades.html" data-orig-id="buttonu109"><!-- container box --><div class="clearfix grpelem temp_no_id" data-orig-id="u110-4"><!-- content --><span class="placeholder" data-placeholder-for="u110-4_0_content"><!-- placeholder node --></span></div></a>
+      </div>
      </div>
      <span class="grpelem placeholder" data-placeholder-for="u1180_content"><!-- placeholder node --></span>
      <div class="clearfix grpelem temp_no_id" data-orig-id="u1230"><!-- group -->
