--- a/about.html
+++ b/about.html
@@ -18,13 +18,13 @@ if(typeof Muse == "undefined") window.Muse = {}; window.Muse.assets = {"required
   <title>About | The Corner</title>
   <!-- CSS -->
   <link rel="stylesheet" type="text/css" href="css/site_global.css?crc=289347364"/>
-  <link rel="stylesheet" type="text/css" href="css/master_a-master.css?crc=4131584361"/>
-  <link rel="stylesheet" type="text/css" href="css/about.css?crc=76377329" id="pagesheet"/>
+  <link rel="stylesheet" type="text/css" href="css/master_a-master.css?crc=3798475662"/>
+  <link rel="stylesheet" type="text/css" href="css/about.css?crc=11589156" id="pagesheet"/>
   <!-- IE-only CSS -->
   <!--[if lt IE 9]>
   <link rel="stylesheet" type="text/css" href="css/iefonts_about.css?crc=3824530138"/>
   <link rel="stylesheet" type="text/css" href="css/nomq_preview_master_a-master.css?crc=3772226739"/>
-  <link rel="stylesheet" type="text/css" href="css/nomq_about.css?crc=4015614952" id="nomq_pagesheet"/>
+  <link rel="stylesheet" type="text/css" href="css/nomq_about.css?crc=4216292901" id="nomq_pagesheet"/>
   <![endif]-->
   <!-- Other scripts -->
   <script type="text/javascript">
@@ -52,9 +52,10 @@ if(typeof Muse == "undefined") window.Muse = {}; window.Muse.assets = {"required
       <p class="shared_content" data-content-guid="u338-4_0_content">This blog is a bit of a mess. If you're reading this right now you're probably only here because Rooster referred you to it or because you have no idea where you are. Either way, on here you'll find posts about cryptocurrency trades (not financial advice, just opinions), my trading algorithms, and my progress at summer camps or internships. Occasionally a guest writer may appear on the blog, maybe to write a post on baking cakes or something I don't really know. If you'd like to stay updated with the madness, please subscribe to our newsletter mail list (can be done at the bottom of any page). Have fun reading!</p>
      </div>
     </div>
-    <div class="clearfix grpelem shared_content" id="pu94-4" data-content-guid="pu94-4_content"><!-- group -->
+    <div class="clearfix" id="u2176"><!-- group -->
+     <a class="nonblock nontext Button ButtonSelected clearfix shared_content" id="buttonu101" href="about.html" data-visibility="changed" style="visibility:hidden" data-content-guid="buttonu101_content"><!-- container box --><div class="clearfix grpelem" id="u102-4" data-sizePolicy="fixed" data-pintopage="page_fluidx"><!-- content --><p class="shared_content" data-content-guid="u102-4_0_content">about</p></div></a>
      <a class="nonblock nontext clearfix shared_content" id="u94-4" href="index.html" data-muse-temp-textContainer-sizePolicy="true" data-muse-temp-textContainer-pinning="true" data-content-guid="u94-4_content"><!-- content --><p>the corner</p></a>
-     <a class="nonblock nontext Button ButtonSelected clearfix" id="buttonu101" href="about.html" data-visibility="changed" style="visibility:hidden"><!-- container box --><div class="clearfix grpelem" id="u102-4" data-sizePolicy="fixed" data-pintopage="page_fluidx"><!-- content --><p class="shared_content" data-content-guid="u102-4_0_content">about</p></div></a>
+     <a class="nonblock nontext Button clearfix shared_content" id="buttonu109" href="trades.html" data-visibility="changed" style="visibility:hidden" data-content-guid="buttonu109_content"><!-- container box --><div class="clearfix grpelem" id="u110-4" data-sizePolicy="fixed" data-pintopage="page_fluidx"><!-- content --><p class="shared_content" data-content-guid="u110-4_0_content">trades</p></div></a>
     </div>
     <div class="clearfix grpelem" id="pu166-4"><!-- column -->
      <div class="clearfix colelem" id="u166-4" data-muse-temp-textContainer-sizePolicy="true" data-muse-temp-textContainer-pinning="true"><!-- content -->
@@ -64,7 +65,6 @@ if(typeof Muse == "undefined") window.Muse = {}; window.Muse.assets = {"required
       <p class="shared_content" data-content-guid="u337-4_0_content">The Blog</p>
      </div>
     </div>
-    <a class="nonblock nontext Button clearfix shared_content" id="buttonu109" href="trades.html" data-visibility="changed" style="visibility:hidden" data-content-guid="buttonu109_content"><!-- container box --><div class="clearfix grpelem" id="u110-4" data-sizePolicy="fixed" data-pintopage="page_fluidx"><!-- content --><p class="shared_content" data-content-guid="u110-4_0_content">trades</p></div></a>
     <div class="verticalspacer" data-offset-top="609" data-content-above-spacer="608" data-content-below-spacer="122" data-sizePolicy="fixed" data-pintopage="page_fixedLeft"></div>
     <div class="browser_width grpelem" id="u200-bw">
      <div id="u200"><!-- group -->
@@ -90,7 +90,11 @@ if(typeof Muse == "undefined") window.Muse = {}; window.Muse.assets = {"required
       <span class="placeholder" data-placeholder-for="u338-4_0_content"><!-- placeholder node --></span>
      </div>
     </div>
-    <span class="clearfix grpelem placeholder" data-placeholder-for="pu94-4_content"><!-- placeholder node --></span>
+    <div class="clearfix temp_no_id" data-orig-id="u2176"><!-- group -->
+     <span class="nonblock nontext clearfix placeholder" data-placeholder-for="u94-4_content"><!-- placeholder node --></span>
+     <span class="nonblock nontext Button ButtonSelected rounded-corners clearfix placeholder" data-placeholder-for="buttonu101_content"><!-- placeholder node --></span>
+     <span class="nonblock nontext Button rounded-corners clearfix placeholder" data-placeholder-for="buttonu109_content"><!-- placeholder node --></span>
+    </div>
     <div class="clearfix grpelem temp_no_id" data-orig-id="pu166-4"><!-- column -->
      <div class="clearfix colelem temp_no_id" data-sizePolicy="fixed" data-pintopage="page_fluidx" data-orig-id="u166-4"><!-- content -->
       <span class="placeholder" data-placeholder-for="u166-4_0_content"><!-- placeholder node --></span>
@@ -99,7 +103,6 @@ if(typeof Muse == "undefined") window.Muse = {}; window.Muse.assets = {"required
       <span class="placeholder" data-placeholder-for="u337-4_0_content"><!-- placeholder node --></span>
      </div>
     </div>
-    <span class="nonblock nontext Button clearfix placeholder" data-placeholder-for="buttonu109_content"><!-- placeholder node --></span>
     <div class="verticalspacer" data-offset-top="1260" data-content-above-spacer="1259" data-content-below-spacer="121" data-sizePolicy="fixed" data-pintopage="page_fixedLeft"></div>
     <div class="browser_width grpelem temp_no_id" data-orig-id="u200-bw">
      <div class="temp_no_id" data-orig-id="u200"><!-- group -->
@@ -125,12 +128,17 @@ if(typeof Muse == "undefined") window.Muse = {}; window.Muse.assets = {"required
       <span class="placeholder" data-placeholder-for="u338-4_0_content"><!-- placeholder node --></span>
      </div>
     </div>
-    <div class="clearfix grpelem temp_no_id" data-orig-id="pu94-4"><!-- group -->
-     <div id="u94-4-wrapper">
-      <span class="nonblock nontext clearfix placeholder" data-placeholder-for="u94-4_content"><!-- placeholder node --></span>
-     </div>
-     <div id="buttonu101-wrapper">
-      <a class="nonblock nontext Button ButtonSelected clearfix temp_no_id" href="about.html" data-visibility="changed" style="visibility:hidden" data-orig-id="buttonu101"><!-- container box --><div class="clearfix grpelem temp_no_id" data-muse-temp-textContainer-sizePolicy="true" data-muse-temp-textContainer-pinning="true" data-orig-id="u102-4"><!-- content --><span class="placeholder" data-placeholder-for="u102-4_0_content"><!-- placeholder node --></span></div></a>
+    <div id="u2176-wrapper">
+     <div class="clearfix temp_no_id" data-orig-id="u2176"><!-- group -->
+      <div id="u94-4-wrapper">
+       <span class="nonblock nontext clearfix placeholder" data-placeholder-for="u94-4_content"><!-- placeholder node --></span>
+      </div>
+      <div id="buttonu101-wrapper">
+       <a class="nonblock nontext Button ButtonSelected clearfix temp_no_id" href="about.html" data-visibility="changed" style="visibility:hidden" data-orig-id="buttonu101"><!-- container box --><div class="clearfix grpelem temp_no_id" data-muse-temp-textContainer-sizePolicy="true" data-muse-temp-textContainer-pinning="true" data-orig-id="u102-4"><!-- content --><span class="placeholder" data-placeholder-for="u102-4_0_content"><!-- placeholder node --></span></div></a>
+      </div>
+      <div id="buttonu109-wrapper">
+       <a class="nonblock nontext Button clearfix temp_no_id" href="trades.html" data-visibility="changed" style="visibility:hidden" data-orig-id="buttonu109"><!-- container box --><div class="clearfix grpelem temp_no_id" data-muse-temp-textContainer-sizePolicy="true" data-muse-temp-textContainer-pinning="true" data-orig-id="u110-4"><!-- content --><span class="placeholder" data-placeholder-for="u110-4_0_content"><!-- placeholder node --></span></div></a>
+      </div>
      </div>
     </div>
     <div class="clearfix grpelem temp_no_id" data-orig-id="pu166-4"><!-- column -->
@@ -140,9 +148,6 @@ if(typeof Muse == "undefined") window.Muse = {}; window.Muse.assets = {"required
      <div class="clearfix colelem temp_no_id" data-sizePolicy="fixed" data-pintopage="page_fluidx" data-orig-id="u337-4"><!-- content -->
       <span class="placeholder" data-placeholder-for="u337-4_0_content"><!-- placeholder node --></span>
      </div>
-    </div>
-    <div id="buttonu109-wrapper">
-     <a class="nonblock nontext Button clearfix temp_no_id" href="trades.html" data-visibility="changed" style="visibility:hidden" data-orig-id="buttonu109"><!-- container box --><div class="clearfix grpelem temp_no_id" data-muse-temp-textContainer-sizePolicy="true" data-muse-temp-textContainer-pinning="true" data-orig-id="u110-4"><!-- content --><span class="placeholder" data-placeholder-for="u110-4_0_content"><!-- placeholder node --></span></div></a>
     </div>
     <div class="verticalspacer" data-offset-top="1253" data-content-above-spacer="1253" data-content-below-spacer="121" data-sizePolicy="fixed" data-pintopage="page_fixedLeft"></div>
     <div class="browser_width grpelem temp_no_id" data-orig-id="u200-bw">
