--- a/trades.html
+++ b/trades.html
@@ -18,13 +18,13 @@ if(typeof Muse == "undefined") window.Muse = {}; window.Muse.assets = {"required
   <title>Trades | The Corner</title>
   <!-- CSS -->
   <link rel="stylesheet" type="text/css" href="css/site_global.css?crc=289347364"/>
-  <link rel="stylesheet" type="text/css" href="css/master_a-master.css?crc=4131584361"/>
-  <link rel="stylesheet" type="text/css" href="css/trades.css?crc=3789108429" id="pagesheet"/>
+  <link rel="stylesheet" type="text/css" href="css/master_a-master.css?crc=3798475662"/>
+  <link rel="stylesheet" type="text/css" href="css/trades.css?crc=218931606" id="pagesheet"/>
   <!-- IE-only CSS -->
   <!--[if lt IE 9]>
   <link rel="stylesheet" type="text/css" href="css/iefonts_trades.css?crc=3824530138"/>
   <link rel="stylesheet" type="text/css" href="css/nomq_preview_master_a-master.css?crc=3772226739"/>
-  <link rel="stylesheet" type="text/css" href="css/nomq_trades.css?crc=4131717929" id="nomq_pagesheet"/>
+  <link rel="stylesheet" type="text/css" href="css/nomq_trades.css?crc=4221773385" id="nomq_pagesheet"/>
   <![endif]-->
   <!-- Other scripts -->
   <script type="text/javascript">
@@ -45,18 +45,20 @@ if(typeof Muse == "undefined") window.Muse = {}; window.Muse.assets = {"required
      <div class="browser_width shared_content" id="u118-bw" data-content-guid="u118-bw_content">
       <div id="u118"><!-- simple frame --></div>
      </div>
-     <a class="nonblock nontext Button clearfix shared_content" id="buttonu101" href="about.html" data-visibility="changed" style="visibility:hidden" data-content-guid="buttonu101_content"><!-- container box --><div class="clearfix grpelem" id="u102-4" data-sizePolicy="fixed" data-pintopage="page_fluidx"><!-- content --><p class="shared_content" data-content-guid="u102-4_0_content">about</p></div></a>
+     <div class="clearfix" id="u2176"><!-- group -->
+      <a class="nonblock nontext Button clearfix shared_content" id="buttonu101" href="about.html" data-visibility="changed" style="visibility:hidden" data-content-guid="buttonu101_content"><!-- container box --><div class="clearfix grpelem" id="u102-4" data-sizePolicy="fixed" data-pintopage="page_fluidx"><!-- content --><p class="shared_content" data-content-guid="u102-4_0_content">about</p></div></a>
+      <a class="nonblock nontext clearfix shared_content" id="u94-4" href="index.html" data-muse-temp-textContainer-sizePolicy="true" data-muse-temp-textContainer-pinning="true" data-content-guid="u94-4_content"><!-- content --><p>the corner</p></a>
+      <a class="nonblock nontext Button ButtonSelected clearfix shared_content" id="buttonu109" href="trades.html" data-visibility="changed" style="visibility:hidden" data-content-guid="buttonu109_content"><!-- container box --><div class="clearfix grpelem" id="u110-4" data-sizePolicy="fixed" data-pintopage="page_fluidx"><!-- content --><p class="shared_content" data-content-guid="u110-4_0_content">trades</p></div></a>
+     </div>
     </div>
-    <a class="nonblock nontext clearfix grpelem shared_content" id="u448-4" href="https://twitter.com/BitcoinRooster" data-muse-temp-textContainer-sizePolicy="true" data-muse-temp-textContainer-pinning="true" data-content-guid="u448-4_content"><!-- content --><p>Sorry, nothing here yet :)</p></a>
-    <a class="nonblock nontext clearfix shared_content" id="u94-4" href="index.html" data-muse-temp-textContainer-sizePolicy="true" data-muse-temp-textContainer-pinning="true" data-content-guid="u94-4_content"><!-- content --><p>the corner</p></a>
     <div class="clearfix grpelem shared_content" id="pu334" data-content-guid="pu334_content"><!-- column -->
      <div class="colelem shared_content" id="u334" data-content-guid="u334_content"><!-- simple frame --></div>
      <div class="clearfix colelem shared_content" id="u279-4" data-muse-temp-textContainer-sizePolicy="true" data-muse-temp-textContainer-pinning="true" data-content-guid="u279-4_content"><!-- content -->
       <p>WALL OF TRADES</p>
      </div>
      <a class="nonblock nontext clearfix colelem shared_content" id="u276-4" href="https://twitter.com/BitcoinRooster" data-muse-temp-textContainer-sizePolicy="true" data-muse-temp-textContainer-pinning="true" data-content-guid="u276-4_content"><!-- content --><p>@BitcoinRooster</p></a>
+     <a class="nonblock nontext clearfix colelem shared_content" id="u448-4" href="https://twitter.com/BitcoinRooster" data-muse-temp-textContainer-sizePolicy="true" data-muse-temp-textContainer-pinning="true" data-content-guid="u448-4_content"><!-- content --><p>Sorry, nothing here yet :)</p></a>
     </div>
-    <a class="nonblock nontext Button ButtonSelected clearfix shared_content" id="buttonu109" href="trades.html" data-visibility="changed" style="visibility:hidden" data-content-guid="buttonu109_content"><!-- container box --><div class="clearfix grpelem" id="u110-4" data-sizePolicy="fixed" data-pintopage="page_fluidx"><!-- content --><p class="shared_content" data-content-guid="u110-4_0_content">trades</p></div></a>
     <div class="verticalspacer" data-offset-top="245" data-content-above-spacer="244" data-content-below-spacer="122" data-sizePolicy="fixed" data-pintopage="page_fixedLeft"></div>
     <div class="browser_width grpelem" id="u200-bw">
      <div id="u200"><!-- group -->
@@ -75,12 +77,16 @@ if(typeof Muse == "undefined") window.Muse = {}; window.Muse.assets = {"required
    <div class="clearfix borderbox temp_no_id" data-orig-id="page"><!-- group -->
     <span class="browser_width placeholder" data-placeholder-for="u118-bw_content"><!-- placeholder node --></span>
     <span class="nonblock nontext clearfix grpelem placeholder" data-placeholder-for="u448-4_content"><!-- placeholder node --></span>
-    <div class="clearfix grpelem" id="pu94-4"><!-- group -->
+    <div class="clearfix temp_no_id" data-orig-id="u2176"><!-- group -->
      <span class="nonblock nontext clearfix placeholder" data-placeholder-for="u94-4_content"><!-- placeholder node --></span>
      <span class="nonblock nontext Button clearfix placeholder" data-placeholder-for="buttonu101_content"><!-- placeholder node --></span>
+     <span class="nonblock nontext Button ButtonSelected clearfix placeholder" data-placeholder-for="buttonu109_content"><!-- placeholder node --></span>
     </div>
-    <span class="clearfix grpelem placeholder" data-placeholder-for="pu334_content"><!-- placeholder node --></span>
-    <span class="nonblock nontext Button ButtonSelected clearfix placeholder" data-placeholder-for="buttonu109_content"><!-- placeholder node --></span>
+    <div class="clearfix grpelem temp_no_id" data-orig-id="pu334"><!-- column -->
+     <span class="colelem placeholder" data-placeholder-for="u334_content"><!-- placeholder node --></span>
+     <span class="clearfix colelem placeholder" data-placeholder-for="u279-4_content"><!-- placeholder node --></span>
+     <span class="nonblock nontext clearfix colelem placeholder" data-placeholder-for="u276-4_content"><!-- placeholder node --></span>
+    </div>
     <div class="verticalspacer" data-offset-top="336" data-content-above-spacer="335" data-content-below-spacer="122" data-sizePolicy="fixed" data-pintopage="page_fixedLeft"></div>
     <div class="browser_width grpelem temp_no_id" data-orig-id="u200-bw">
      <div class="temp_no_id" data-orig-id="u200"><!-- group -->
@@ -99,22 +105,21 @@ if(typeof Muse == "undefined") window.Muse = {}; window.Muse.assets = {"required
    <div class="clearfix borderbox temp_no_id" data-orig-id="page"><!-- group -->
     <div class="clearfix grpelem temp_no_id" data-orig-id="pu118"><!-- group -->
      <span class="browser_width placeholder" data-placeholder-for="u118-bw_content"><!-- placeholder node --></span>
-     <div id="u94-4-wrapper">
-      <span class="nonblock nontext clearfix placeholder" data-placeholder-for="u94-4_content"><!-- placeholder node --></span>
+     <div id="u2176-wrapper">
+      <div class="clearfix temp_no_id" data-orig-id="u2176"><!-- group -->
+       <div id="u94-4-wrapper">
+        <span class="nonblock nontext clearfix placeholder" data-placeholder-for="u94-4_content"><!-- placeholder node --></span>
+       </div>
+       <div id="buttonu101-wrapper">
+        <a class="nonblock nontext Button clearfix temp_no_id" href="about.html" data-visibility="changed" style="visibility:hidden" data-orig-id="buttonu101"><!-- container box --><div class="clearfix grpelem temp_no_id" data-muse-temp-textContainer-sizePolicy="true" data-muse-temp-textContainer-pinning="true" data-orig-id="u102-4"><!-- content --><span class="placeholder" data-placeholder-for="u102-4_0_content"><!-- placeholder node --></span></div></a>
+       </div>
+       <div id="buttonu109-wrapper">
+        <a class="nonblock nontext Button ButtonSelected clearfix temp_no_id" href="trades.html" data-visibility="changed" style="visibility:hidden" data-orig-id="buttonu109"><!-- container box --><div class="clearfix grpelem temp_no_id" data-muse-temp-textContainer-sizePolicy="true" data-muse-temp-textContainer-pinning="true" data-orig-id="u110-4"><!-- content --><span class="placeholder" data-placeholder-for="u110-4_0_content"><!-- placeholder node --></span></div></a>
+       </div>
+      </div>
      </div>
-     <div id="buttonu101-wrapper">
-      <a class="nonblock nontext Button clearfix temp_no_id" href="about.html" data-visibility="changed" style="visibility:hidden" data-orig-id="buttonu101"><!-- container box --><div class="clearfix grpelem temp_no_id" data-muse-temp-textContainer-sizePolicy="true" data-muse-temp-textContainer-pinning="true" data-orig-id="u102-4"><!-- content --><span class="placeholder" data-placeholder-for="u102-4_0_content"><!-- placeholder node --></span></div></a>
-     </div>
     </div>
-    <div class="clearfix grpelem temp_no_id" data-orig-id="pu334"><!-- column -->
-     <span class="colelem placeholder" data-placeholder-for="u334_content"><!-- placeholder node --></span>
-     <span class="clearfix colelem placeholder" data-placeholder-for="u279-4_content"><!-- placeholder node --></span>
-     <span class="nonblock nontext clearfix colelem placeholder" data-placeholder-for="u276-4_content"><!-- placeholder node --></span>
-     <span class="nonblock nontext clearfix colelem placeholder" data-placeholder-for="u448-4_content"><!-- placeholder node --></span>
-    </div>
-    <div id="buttonu109-wrapper">
-     <a class="nonblock nontext Button ButtonSelected clearfix temp_no_id" href="trades.html" data-visibility="changed" style="visibility:hidden" data-orig-id="buttonu109"><!-- container box --><div class="clearfix grpelem temp_no_id" data-muse-temp-textContainer-sizePolicy="true" data-muse-temp-textContainer-pinning="true" data-orig-id="u110-4"><!-- content --><span class="placeholder" data-placeholder-for="u110-4_0_content"><!-- placeholder node --></span></div></a>
-    </div>
+    <span class="clearfix grpelem placeholder" data-placeholder-for="pu334_content"><!-- placeholder node --></span>
     <div class="verticalspacer" data-offset-top="504" data-content-above-spacer="503" data-content-below-spacer="121" data-sizePolicy="fixed" data-pintopage="page_fixedLeft"></div>
     <div class="browser_width grpelem temp_no_id" data-orig-id="u200-bw">
      <div class="temp_no_id" data-orig-id="u200"><!-- group -->
